// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderContent should render without error, filled order 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c11 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 12px;
}

.c6 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c7 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c13 {
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c18 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
  color: #FC72FF;
  stroke: #FC72FF;
  font-weight: 500;
}

.c18:hover {
  opacity: 0.6;
}

.c18:active {
  opacity: 0.4;
}

.c8 {
  width: 100%;
  height: 1px;
  border-width: 0;
  margin: 0;
  background-color: #22222212;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 8px;
}

.c15 {
  cursor: auto;
  color: #7D7D7D;
}

.c16 {
  text-align: right;
  overflow-wrap: break-word;
}

.c17 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0;
  grid-template-columns: 1fr auto;
  grid-gap: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-align: left;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c4 img {
  width: 19px;
  height: 40px;
  object-fit: cover;
}

.c4 img:first-child {
  border-radius: 20px 0 0 20px;
  object-position: 0 0;
}

.c4 img:last-child {
  border-radius: 0 20px 20px 0;
  object-position: 100% 0;
}

.c5 {
  width: 20px;
  height: 40px;
  border-radius: 50%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c9 {
  margin: 28px 0;
}

<div>
  <span
    class=""
    style="display: contents;"
  >
    <span
      class=" _dsp_contents"
    >
      <span
        class=" t_light _dsp_contents is_Theme"
      >
        <div
          class="c0"
        >
          <div
            class="c1 c2"
          >
            <div
              class="c3"
            >
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative"
              >
                <div
                  class="c4"
                  size="40"
                >
                  <img
                    class="c5"
                    size="40"
                    src="blank_token.svg"
                  />
                  <img
                    class="c5"
                    size="40"
                    src="blank_token.svg"
                  />
                </div>
              </div>
            </div>
            <div
              class="c0"
            >
              <div
                class="c6 css-rjqmed"
              >
                Order executed
              </div>
              <div
                class="c7 css-1aekuku"
              >
                Mock Date
              </div>
            </div>
          </div>
          <div
            class="c8 c9"
          />
          <div
            class="c10"
          >
            <div
              class="c1 c11"
            >
              <div
                class="c12"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c13 css-vhdk4b"
                    data-testid="input-amount"
                  >
                    252.074
                     
                    DAI
                  </div>
                  <div
                    class="c7 css-142zc9n"
                  >
                    -
                  </div>
                </div>
              </div>
            </div>
            <svg
              fill="none"
              height="24"
              stroke="#CECECE"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <polyline
                points="19 12 12 19 5 12"
              />
            </svg>
            <div
              class="c1 c11"
            >
              <div
                class="c12"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c13 css-vhdk4b"
                    data-testid="output-amount"
                  >
                    0.10684
                     
                    WETH
                  </div>
                  <div
                    class="c7 css-142zc9n"
                  >
                    -
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c8 c9"
          />
          <div
            class="c14"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
            >
              <div
                class="c6 c15 css-142zc9n"
                data-testid="swap-li-label"
              >
                Rate
              </div>
              <div
                class="c6 c16 css-142zc9n"
              >
                <button
                  class="c17"
                  title="1 WETH = 2,359.34 DAI "
                >
                  <div
                    class="c6 css-142zc9n"
                  >
                    1 WETH = 2,359.34 DAI 
                  </div>
                   
                </button>
              </div>
            </div>
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
            >
              <div
                class="c6 c15 css-142zc9n"
                data-testid="swap-li-label"
              >
                Network cost
              </div>
              <div
                class="c6 c16 css-142zc9n"
              >
                <span>
                  $0
                </span>
              </div>
            </div>
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
            >
              <div
                class="c6 c15 css-142zc9n"
                data-testid="swap-li-label"
              >
                Transaction ID
              </div>
              <div
                class="c6 c16 css-142zc9n"
              >
                <a
                  class="c18"
                  href="https://etherscan.io/tx/0xad7a8f73f28fd0cc16459111899dd1632164ae139fcf5281a1bced56e1ff6564"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  0xad...6564
                </a>
              </div>
            </div>
          </div>
        </div>
      </span>
    </span>
  </span>
</div>
`;

exports[`OrderContent should render without error, limit order 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c11 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 12px;
}

.c6 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c7 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c13 {
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c24 {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-transition-duration: 125ms;
  transition-duration: 125ms;
  color: #FC72FF;
  stroke: #FC72FF;
  font-weight: 500;
}

.c24:hover {
  opacity: 0.6;
}

.c24:active {
  opacity: 0.4;
}

.c8 {
  width: 100%;
  height: 1px;
  border-width: 0;
  margin: 0;
  background-color: #22222212;
}

.c21 {
  background-color: transparent;
  bottom: 0;
  border-radius: inherit;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transition: 150ms ease background-color;
  transition: 150ms ease background-color;
  width: 100%;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #22222212;
  border-radius: 16px;
  border: 0;
  color: #222222;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 16px;
  font-weight: 535;
  gap: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 20px;
  padding: 10px 12px;
  position: relative;
  -webkit-transition: 150ms ease opacity;
  transition: 150ms ease opacity;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c18:active .c20 {
  background-color: #B8C0DC3d;
}

.c18:focus .c20 {
  background-color: #B8C0DC3d;
}

.c18:hover .c20 {
  background-color: #98A1C014;
}

.c18:disabled {
  cursor: default;
  opacity: 0.6;
}

.c18:disabled:active .c20,
.c18:disabled:focus .c20,
.c18:disabled:hover .c20 {
  background-color: transparent;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 8px;
}

.c15 {
  cursor: auto;
  color: #7D7D7D;
}

.c16 {
  text-align: right;
  overflow-wrap: break-word;
}

.c17 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0;
  grid-template-columns: 1fr auto;
  grid-gap: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-align: left;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c4 img {
  width: 19px;
  height: 40px;
  object-fit: cover;
}

.c4 img:first-child {
  border-radius: 20px 0 0 20px;
  object-position: 0 0;
}

.c4 img:last-child {
  border-radius: 0 20px 20px 0;
  object-position: 100% 0;
}

.c5 {
  width: 20px;
  height: 40px;
  border-radius: 50%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c22 {
  background-color: #F9F9F9;
  border-radius: 12px;
  padding: 12px;
  margin-top: 12px;
}

.c23 {
  line-height: 16px;
}

.c9 {
  margin: 28px 0;
}

.c19 {
  margin-top: 16px;
  border-radius: 12px;
}

<div>
  <span
    class=""
    style="display: contents;"
  >
    <span
      class=" _dsp_contents"
    >
      <span
        class=" t_light _dsp_contents is_Theme"
      >
        <div
          class="c0"
        >
          <div
            class="c1 c2"
          >
            <div
              class="c3"
            >
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative"
              >
                <div
                  class="c4"
                  size="40"
                >
                  <img
                    class="c5"
                    size="40"
                    src="blank_token.svg"
                  />
                  <img
                    class="c5"
                    size="40"
                    src="blank_token.svg"
                  />
                </div>
              </div>
            </div>
            <div
              class="c0"
            >
              <div
                class="c6 css-rjqmed"
              >
                Limit pending
              </div>
              <div
                class="c7 css-1aekuku"
              >
                Mock Date
              </div>
            </div>
          </div>
          <div
            class="c8 c9"
          />
          <div
            class="c10"
          >
            <div
              class="c1 c11"
            >
              <div
                class="c12"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c13 css-vhdk4b"
                    data-testid="input-amount"
                  >
                    252.074
                     
                    DAI
                  </div>
                  <div
                    class="c7 css-142zc9n"
                  >
                    -
                  </div>
                </div>
              </div>
            </div>
            <svg
              fill="none"
              height="24"
              stroke="#CECECE"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <polyline
                points="19 12 12 19 5 12"
              />
            </svg>
            <div
              class="c1 c11"
            >
              <div
                class="c12"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c13 css-vhdk4b"
                    data-testid="output-amount"
                  >
                    0.10684
                     
                    WETH
                  </div>
                  <div
                    class="c7 css-142zc9n"
                  >
                    -
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c8 c9"
          />
          <div
            class="c14"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
            >
              <div
                class="c6 c15 css-142zc9n"
                data-testid="swap-li-label"
              >
                Rate
              </div>
              <div
                class="c6 c16 css-142zc9n"
              >
                <button
                  class="c17"
                  title="1 WETH = 2,359.34 DAI "
                >
                  <div
                    class="c6 css-142zc9n"
                  >
                    1 WETH = 2,359.34 DAI 
                  </div>
                   
                </button>
              </div>
            </div>
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
            >
              <div
                class="c6 c15 css-142zc9n"
                data-testid="swap-li-label"
              >
                Expiry
              </div>
              <div
                class="c6 c16 css-142zc9n"
              >
                <span />
              </div>
            </div>
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
            >
              <div
                class="c6 c15 css-142zc9n"
                data-testid="swap-li-label"
              >
                Network cost
              </div>
              <div
                class="c6 c16 css-142zc9n"
              >
                <span>
                  $0
                </span>
              </div>
            </div>
          </div>
          <button
            class="c18 c19"
            size="1"
          >
            <div
              class="c20 c21"
            />
            Cancel limit
          </button>
          <div
            class="c14 c22"
          >
            <div
              class="c7 c23 css-1m65e73"
            >
              Please be aware that the execution for limits may vary based on real-time market fluctuations and Ethereum network congestion. Limits may not execute exactly when tokens reach the specified price.
            </div>
            <div
              class="c7 c23 css-1m65e73"
            >
              Canceling a limit has a network cost.
            </div>
            <div
              class="c7 c23 css-1m65e73"
            >
              <a
                class="c24"
                href="https://support.uniswap.org/hc/en-us/articles/24300813697933"
                rel="noopener noreferrer"
                target="_blank"
              >
                Learn more
              </a>
            </div>
          </div>
        </div>
      </span>
    </span>
  </span>
</div>
`;

exports[`OrderContent should render without error, open order 1`] = `
.c1 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c2 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c11 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  gap: 12px;
}

.c6 {
  color: #222222;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c7 {
  color: #7D7D7D;
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c13 {
  -webkit-letter-spacing: -0.01em;
  -moz-letter-spacing: -0.01em;
  -ms-letter-spacing: -0.01em;
  letter-spacing: -0.01em;
}

.c8 {
  width: 100%;
  height: 1px;
  border-width: 0;
  margin: 0;
  background-color: #22222212;
}

.c21 {
  background-color: transparent;
  bottom: 0;
  border-radius: inherit;
  height: 100%;
  left: 0;
  position: absolute;
  right: 0;
  top: 0;
  -webkit-transition: 150ms ease background-color;
  transition: 150ms ease background-color;
  width: 100%;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #22222212;
  border-radius: 16px;
  border: 0;
  color: #222222;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  font-size: 16px;
  font-weight: 535;
  gap: 12px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 20px;
  padding: 10px 12px;
  position: relative;
  -webkit-transition: 150ms ease opacity;
  transition: 150ms ease opacity;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c18:active .c20 {
  background-color: #B8C0DC3d;
}

.c18:focus .c20 {
  background-color: #B8C0DC3d;
}

.c18:hover .c20 {
  background-color: #98A1C014;
}

.c18:disabled {
  cursor: default;
  opacity: 0.6;
}

.c18:disabled:active .c20,
.c18:disabled:focus .c20,
.c18:disabled:hover .c20 {
  background-color: transparent;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 12px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 4px;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  gap: 8px;
}

.c15 {
  cursor: auto;
  color: #7D7D7D;
}

.c16 {
  text-align: right;
  overflow-wrap: break-word;
}

.c17 {
  background-color: transparent;
  border: none;
  cursor: pointer;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  padding: 0;
  grid-template-columns: 1fr auto;
  grid-gap: 0.25rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  text-align: left;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-user-select: text;
  -moz-user-select: text;
  -ms-user-select: text;
  user-select: text;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 2px;
  position: relative;
  top: 0;
  left: 0;
}

.c4 img {
  width: 19px;
  height: 40px;
  object-fit: cover;
}

.c4 img:first-child {
  border-radius: 20px 0 0 20px;
  object-position: 0 0;
}

.c4 img:last-child {
  border-radius: 0 20px 20px 0;
  object-position: 100% 0;
}

.c5 {
  width: 20px;
  height: 40px;
  border-radius: 50%;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  top: 0;
  left: 0;
}

.c9 {
  margin: 28px 0;
}

.c19 {
  margin-top: 16px;
  border-radius: 12px;
}

<div>
  <span
    class=""
    style="display: contents;"
  >
    <span
      class=" _dsp_contents"
    >
      <span
        class=" t_light _dsp_contents is_Theme"
      >
        <div
          class="c0"
        >
          <div
            class="c1 c2"
          >
            <div
              class="c3"
            >
              <div
                class="_display-flex _alignItems-stretch _flexBasis-auto _boxSizing-border-box _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-column _position-relative"
              >
                <div
                  class="c4"
                  size="40"
                >
                  <img
                    class="c5"
                    size="40"
                    src="blank_token.svg"
                  />
                  <img
                    class="c5"
                    size="40"
                    src="blank_token.svg"
                  />
                </div>
              </div>
            </div>
            <div
              class="c0"
            >
              <div
                class="c6 css-rjqmed"
              >
                Order pending
              </div>
              <div
                class="c7 css-1aekuku"
              >
                Mock Date
              </div>
            </div>
          </div>
          <div
            class="c8 c9"
          />
          <div
            class="c10"
          >
            <div
              class="c1 c11"
            >
              <div
                class="c12"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c13 css-vhdk4b"
                    data-testid="input-amount"
                  >
                    252.074
                     
                    DAI
                  </div>
                  <div
                    class="c7 css-142zc9n"
                  >
                    -
                  </div>
                </div>
              </div>
            </div>
            <svg
              fill="none"
              height="24"
              stroke="#CECECE"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <line
                x1="12"
                x2="12"
                y1="5"
                y2="19"
              />
              <polyline
                points="19 12 12 19 5 12"
              />
            </svg>
            <div
              class="c1 c11"
            >
              <div
                class="c12"
              >
                <div
                  class="c12"
                >
                  <div
                    class="c13 css-vhdk4b"
                    data-testid="output-amount"
                  >
                    0.10684
                     
                    WETH
                  </div>
                  <div
                    class="c7 css-142zc9n"
                  >
                    -
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c8 c9"
          />
          <div
            class="c14"
          >
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
            >
              <div
                class="c6 c15 css-142zc9n"
                data-testid="swap-li-label"
              >
                Rate
              </div>
              <div
                class="c6 c16 css-142zc9n"
              >
                <button
                  class="c17"
                  title="1 WETH = 2,359.34 DAI "
                >
                  <div
                    class="c6 css-142zc9n"
                  >
                    1 WETH = 2,359.34 DAI 
                  </div>
                   
                </button>
              </div>
            </div>
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
            >
              <div
                class="c6 c15 css-142zc9n"
                data-testid="swap-li-label"
              >
                Expiry
              </div>
              <div
                class="c6 c16 css-142zc9n"
              >
                <span />
              </div>
            </div>
            <div
              class="_display-flex _flexBasis-auto _boxSizing-border-box _position-relative _minHeight-0px _minWidth-0px _flexShrink-0 _flexDirection-row _alignItems-center _justifyContent-space-betwe3241 _width-10037"
            >
              <div
                class="c6 c15 css-142zc9n"
                data-testid="swap-li-label"
              >
                Network cost
              </div>
              <div
                class="c6 c16 css-142zc9n"
              >
                <span>
                  $0
                </span>
              </div>
            </div>
          </div>
          <button
            class="c18 c19"
            size="1"
          >
            <div
              class="c20 c21"
            />
            Cancel order
          </button>
        </div>
      </span>
    </span>
  </span>
</div>
`;
